fix #2861 extra scrollbar when dragging down layer metadata modal

--- a/web/client/themes/default/less/common.less
+++ b/web/client/themes/default/less/common.less
@@ -1,3 +1,7 @@
+#container {
+    overflow: hidden;
+}
+
 .shadow {
 	-webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.12), 0 4px 8px rgba(0, 0, 0, 0.24);
 	-moz-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.12), 0 4px 8px rgba(0, 0, 0, 0.24);
